# Theseus

./: .gitignore  CHANGELOG.md  LICENSE  NOTES.md  Quests.md  README.md  almost.md  default.nix  theseus.cabal
.github/workflows/: deploy-docs.yml
docPage/: LICENSE  page.css  page.jst
src/: MyLib.hs
src/Theseus/: Constraints.hs  ControlFlow.hs  Eff.hs  EffType.hs  Interpreters.hs  Union.hs
src/Theseus/Effect/: Choice.hs  Coroutine.hs  Error.hs  IO.hs  Input.hs  NonDet.hs  Output.hs  Reader.hs  State.hs  Writer.hs
test/: Choice.hs  Coroutine.hs  Error.hs  FileExample.hs  Interpreting.hs  Main.hs  Reader.hs  State.hs  Terminal.hs  Utils.hs  Writer.hs
