cabal-version: 3.12
name: theseus
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Jack
maintainer: jacksonhgarner@outlook.com
-- copyright:
category: Control
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common shared
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wno-partial-type-signatures
    -Wno-name-shadowing

  build-depends:
    base >=4.21 && <5,
    mtl >=2.3,

  default-extensions:
    BlockArguments
    DerivingVia
    RequiredTypeArguments
    TypeAbstractions
    UndecidableInstances

library
  import: shared
  exposed-modules:
    Theseus.Constraints
    Theseus.Eff
    Theseus.EffType
    Theseus.Effect.Choice
    Theseus.Effect.Coroutine
    Theseus.Effect.Error
    Theseus.Effect.IO
    Theseus.Effect.Input
    Theseus.Effect.Output
    Theseus.Effect.Reader
    Theseus.Effect.State
    Theseus.Effect.Writer
    Theseus.Interpreters
    Theseus.Union

  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src

test-suite theseus-test
  import: shared
  other-modules:
    Choice
    Coroutine
    Error
    FileExample
    Interpreting
    Reader
    State
    Terminal
    Utils
    Writer

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    hspec,
    temporary,
    theseus,
